--- a/plugin/qgistim/qt/qgistim_dockwidget_base.ui
+++ b/plugin/qgistim/qt/qgistim_dockwidget_base.ui
@@ -1,153 +1,221 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>QTimMLDockWidgetBase</class>
+ <class>QgisTimDockWidgetBase</class>
  <widget class="QDockWidget" name="QgisTimDockWidgetBase">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>301</width>
-    <height>513</height>
+    <width>362</width>
+    <height>405</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>QTimML</string>
+   <string>Qgis-Tim</string>
   </property>
   <widget class="QWidget" name="dockWidgetContents">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
-     <widget class="QTabWidget" name="tabWidget">
-      <property name="currentIndex">
-       <number>1</number>
-      </property>
-      <widget class="QWidget" name="Elements">
-       <attribute name="title">
-        <string>Dataset</string>
-       </attribute>
-       <widget class="QPushButton" name="pushButton">
-        <property name="geometry">
-         <rect>
-          <x>280</x>
-          <y>10</y>
-          <width>75</width>
-          <height>24</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>...</string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="lineEdit">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>10</y>
-          <width>261</width>
-          <height>22</height>
-         </rect>
-        </property>
-       </widget>
+    <item row="0" column="1">
+     <widget class="QWidget" name="widget" native="true">
+      <widget class="QWidget" name="gridLayoutWidget">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>0</y>
+         <width>341</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <layout class="QGridLayout" name="gridLayout_2">
+        <item row="0" column="2">
+         <widget class="QPushButton" name="selectGeopackageButton">
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QLineEdit" name="datasetLineEdit"/>
+        </item>
+        <item row="0" column="0">
+         <widget class="QLabel" name="label">
+          <property name="text">
+           <string>Dataset:</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </widget>
-      <widget class="QWidget" name="Model">
-       <attribute name="title">
-        <string>Elements</string>
-       </attribute>
-       <widget class="QWidget" name="layoutWidget">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>13</y>
-          <width>109</width>
-          <height>415</height>
-         </rect>
-        </property>
-        <layout class="QVBoxLayout" name="verticalLayout">
-         <item>
-          <widget class="QPushButton" name="aquiferButton">
-           <property name="text">
-            <string>Aquifer</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="constantButton">
-           <property name="text">
-            <string>Constant</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="wellButton">
-           <property name="text">
-            <string>Well</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="headWellButton">
-           <property name="text">
-            <string>HeadWell</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="circularAreaSinkButton">
-           <property name="text">
-            <string>CircularAreaSink</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="uniformFlowButton">
-           <property name="text">
-            <string>UniformFlow</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="headLineSinkButton">
-           <property name="text">
-            <string>HeadLineSink</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="lineSinkDitchButton">
-           <property name="text">
-            <string>LineSinkDitch</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="impLineDoubletButton">
-           <property name="text">
-            <string>ImpLineDoublet</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="leakyLineDoubletButton">
-           <property name="text">
-            <string>LeakyLineDoublet</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="polygonInhomButton">
-           <property name="text">
-            <string>PolygonInhom</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="domainButton">
-           <property name="text">
-            <string>Domain</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </widget>
+      <widget class="QWidget" name="gridLayoutWidget_2">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>50</y>
+         <width>341</width>
+         <height>189</height>
+        </rect>
+       </property>
+       <layout class="QGridLayout" name="gridLayout_3">
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>Elements:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="0">
+         <widget class="QPushButton" name="wellButton">
+          <property name="text">
+           <string>Well</string>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="0">
+         <widget class="QPushButton" name="headWellButton">
+          <property name="text">
+           <string>HeadWell</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1">
+         <widget class="QPushButton" name="lineSinkDitchButton">
+          <property name="text">
+           <string>LineSinkDitch</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QPushButton" name="headLineSinkButton">
+          <property name="text">
+           <string>HeadLineSink</string>
+          </property>
+         </widget>
+        </item>
+        <item row="7" column="0">
+         <widget class="QPushButton" name="polygonInhomButton">
+          <property name="text">
+           <string>PolygonInhom</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="1">
+         <widget class="QPushButton" name="leakyLineDoubletButton">
+          <property name="text">
+           <string>LeakyLineDoublet</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="QPushButton" name="circularAreaSinkButton">
+          <property name="text">
+           <string>CircularAreaSink</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QPushButton" name="uniformFlowButton">
+          <property name="text">
+           <string>UniformFlow</string>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="1">
+         <widget class="QPushButton" name="impLineDoubletButton">
+          <property name="text">
+           <string>ImpLineDoublet</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="gridLayoutWidget_3">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>280</y>
+         <width>341</width>
+         <height>81</height>
+        </rect>
+       </property>
+       <layout class="QGridLayout" name="gridLayout_4">
+        <item row="4" column="0">
+         <widget class="QPushButton" name="pushButton">
+          <property name="text">
+           <string>Solve</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="QLabel" name="label_3">
+          <property name="text">
+           <string>Solution:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="1">
+         <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <item>
+           <widget class="QLabel" name="label_4">
+            <property name="text">
+             <string>Resolution:</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QDoubleSpinBox" name="doubleSpinBox">
+            <property name="decimals">
+             <number>2</number>
+            </property>
+            <property name="maximum">
+             <double>10000.000000000000000</double>
+            </property>
+            <property name="singleStep">
+             <double>5.000000000000000</double>
+            </property>
+            <property name="value">
+             <double>25.000000000000000</double>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item row="3" column="0">
+         <widget class="QPushButton" name="domainButton">
+          <property name="text">
+           <string>Domain</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="horizontalLayoutWidget_2">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>240</y>
+         <width>341</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <item>
+         <widget class="QLabel" name="label_5">
+          <property name="text">
+           <string>Interpreter:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="datasetLineEdit_2"/>
+        </item>
+        <item>
+         <widget class="QPushButton" name="selectFileButton_2">
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </widget>
      </widget>
     </item>
