--- a/plugin/qgistim/qt/qgistim_dockwidget_base.ui
+++ b/plugin/qgistim/qt/qgistim_dockwidget_base.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>362</width>
-    <height>405</height>
+    <height>441</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -27,10 +27,10 @@
         </rect>
        </property>
        <layout class="QGridLayout" name="gridLayout_2">
-        <item row="0" column="2">
-         <widget class="QPushButton" name="selectGeopackageButton">
+        <item row="0" column="3">
+         <widget class="QPushButton" name="newGeopackageButton">
           <property name="text">
-           <string>...</string>
+           <string>New</string>
           </property>
          </widget>
         </item>
@@ -41,6 +41,13 @@
          <widget class="QLabel" name="label">
           <property name="text">
            <string>Dataset:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <widget class="QPushButton" name="openGeopackageButton">
+          <property name="text">
+           <string>...</string>
           </property>
          </widget>
         </item>
@@ -132,23 +139,23 @@
        <property name="geometry">
         <rect>
          <x>0</x>
-         <y>280</y>
+         <y>320</y>
          <width>341</width>
          <height>81</height>
         </rect>
        </property>
        <layout class="QGridLayout" name="gridLayout_4">
         <item row="4" column="0">
-         <widget class="QPushButton" name="pushButton">
+         <widget class="QPushButton" name="solveButton">
           <property name="text">
            <string>Solve</string>
           </property>
          </widget>
         </item>
-        <item row="2" column="0">
-         <widget class="QLabel" name="label_3">
+        <item row="3" column="0">
+         <widget class="QPushButton" name="domainButton">
           <property name="text">
-           <string>Solution:</string>
+           <string>Domain</string>
           </property>
          </widget>
         </item>
@@ -157,12 +164,12 @@
           <item>
            <widget class="QLabel" name="label_4">
             <property name="text">
-             <string>Resolution:</string>
+             <string>Cellsize</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QDoubleSpinBox" name="doubleSpinBox">
+           <widget class="QDoubleSpinBox" name="cellsizeSpinBox">
             <property name="decimals">
              <number>2</number>
             </property>
@@ -179,10 +186,10 @@
           </item>
          </layout>
         </item>
-        <item row="3" column="0">
-         <widget class="QPushButton" name="domainButton">
+        <item row="2" column="0">
+         <widget class="QLabel" name="label_3">
           <property name="text">
-           <string>Domain</string>
+           <string>Solution:</string>
           </property>
          </widget>
         </item>
@@ -192,7 +199,7 @@
        <property name="geometry">
         <rect>
          <x>0</x>
-         <y>240</y>
+         <y>270</y>
          <width>341</width>
          <height>31</height>
         </rect>
@@ -206,10 +213,10 @@
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="datasetLineEdit_2"/>
+         <widget class="QLineEdit" name="interpreterLineEdit"/>
         </item>
         <item>
-         <widget class="QPushButton" name="selectFileButton_2">
+         <widget class="QPushButton" name="selectInterpreterButton">
           <property name="text">
            <string>...</string>
           </property>
