--- a/plugin/qgistim/qt/qgistim_dockwidget_base.ui
+++ b/plugin/qgistim/qt/qgistim_dockwidget_base.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>362</width>
-    <height>441</height>
+    <width>361</width>
+    <height>439</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,7 +15,7 @@
   </property>
   <widget class="QWidget" name="dockWidgetContents">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="1">
+    <item row="0" column="0">
      <widget class="QWidget" name="widget" native="true">
       <widget class="QWidget" name="gridLayoutWidget">
        <property name="geometry">
@@ -57,7 +57,7 @@
        <property name="geometry">
         <rect>
          <x>0</x>
-         <y>50</y>
+         <y>80</y>
          <width>341</width>
          <height>189</height>
         </rect>
@@ -139,26 +139,12 @@
        <property name="geometry">
         <rect>
          <x>0</x>
-         <y>320</y>
+         <y>290</y>
          <width>341</width>
-         <height>81</height>
+         <height>102</height>
         </rect>
        </property>
        <layout class="QGridLayout" name="gridLayout_4">
-        <item row="4" column="0">
-         <widget class="QPushButton" name="solveButton">
-          <property name="text">
-           <string>Solve</string>
-          </property>
-         </widget>
-        </item>
-        <item row="3" column="0">
-         <widget class="QPushButton" name="domainButton">
-          <property name="text">
-           <string>Domain</string>
-          </property>
-         </widget>
-        </item>
         <item row="3" column="1">
          <layout class="QHBoxLayout" name="horizontalLayout_2">
           <item>
@@ -177,14 +163,21 @@
              <double>10000.000000000000000</double>
             </property>
             <property name="singleStep">
-             <double>5.000000000000000</double>
+             <double>10.000000000000000</double>
             </property>
             <property name="value">
-             <double>25.000000000000000</double>
+             <double>100.000000000000000</double>
             </property>
            </widget>
           </item>
          </layout>
+        </item>
+        <item row="3" column="0">
+         <widget class="QPushButton" name="domainButton">
+          <property name="text">
+           <string>Domain</string>
+          </property>
+         </widget>
         </item>
         <item row="2" column="0">
          <widget class="QLabel" name="label_3">
@@ -193,36 +186,27 @@
           </property>
          </widget>
         </item>
+        <item row="4" column="0">
+         <widget class="QPushButton" name="computeButton">
+          <property name="text">
+           <string>Compute</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </widget>
-      <widget class="QWidget" name="horizontalLayoutWidget_2">
+      <widget class="QPushButton" name="serverButton">
        <property name="geometry">
         <rect>
          <x>0</x>
-         <y>270</y>
-         <width>341</width>
+         <y>40</y>
+         <width>171</width>
          <height>31</height>
         </rect>
        </property>
-       <layout class="QHBoxLayout" name="horizontalLayout_3">
-        <item>
-         <widget class="QLabel" name="label_5">
-          <property name="text">
-           <string>Interpreter:</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLineEdit" name="interpreterLineEdit"/>
-        </item>
-        <item>
-         <widget class="QPushButton" name="selectInterpreterButton">
-          <property name="text">
-           <string>...</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
+       <property name="text">
+        <string>Start TimServer</string>
+       </property>
       </widget>
      </widget>
     </item>
